# Vacancies_Parser

./: README.md  main.py  pyproject.toml
src/: classes.py  connector_classes.py  engine_requests.py  user_interaction.py  vacancy.py  vacancy_classes.py
tests/: test_connector.py  test_engine_requests.py  test_vacancy.py
